--- a/Calendar/styles.css
+++ b/Calendar/styles.css
@@ -89,20 +89,6 @@ a:hover {
     overflow: hidden;
 }
 
-#signOut {
-    display: inline-block;
-    text-align: center;
-    padding: 0.25rem;
-    background-color: transparent;
-    border: none;
-    font-size: inherit;
-    color: white;
-}
-
-#signOut:hover {
-    cursor: pointer;
-    color: #8c8c8c;
-}
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -120,43 +106,206 @@ a:hover {
     background-color: #8c8c8c;
 }
 
-
-
-
-h1 {
-    display: block;
+h2 {
+    background-color: #1e4a34;
+    color: white;
+    width: 95%;
+    margin: 0 auto;
+    padding: 3rem;
+    text-align: center;
+    border-radius: 10px;
     font-size: 2rem;
-    color: #333;
-    margin-bottom: 1rem;
-    background-color: #fff;
 }
 
-.wrapper {
-    display: block;
-    width: 100%;
-    height: 100vh;
-    text-align: center;
+h2:hover {
+    transition: all .5s ease;
+    transform: scale(1.02);
 }
 
 #top {
-    display: block;
+    transition: opacity 3s ease-in-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; 
+    margin: 0 auto; 
+    border: 2px solid #f3f3f3;
+    width: 95%;
+    margin-top: 0rem;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
+    border-top: none;
+    border-bottom: none;
+    border-radius: 5px 5px 0px 0px; 
+    background-color: #f7f7f7;
+}
+
+.top-background {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; 
+    margin: 0 auto; 
+    background-color: white;
+    border: 1px solid #f3f3f3;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.08);
+    padding: 5rem;
+    padding-right: 8rem;
+    padding-left: 8rem;
+    margin-top: 1rem;
+    border-radius: 10px;
+}
+
+h3 {
+    font-size: 2rem;
+    color: #333;
+}
+
+
+#previous, 
+#next{
+    padding: .75rem;
+    font-size: 1rem;
+    margin: .5rem 1.25rem;
+    border: 1px solid #c8c8c8;
+    border-radius: 15px;
+    background-color: #fafafa;
+    transition: transform 0.3s ease, border-color 0.3s ease;
+}
+
+#previous:hover,
+#next:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+    border-color: #2596be;
+}
+
+.table-calendar {
+    font-size: 2.5rem;
+    width: 150%;
+    table-layout: fixed;
+    padding: 2rem;
+    border-collapse: collapse;
+    border-radius: 5px;
+    margin-top: 1rem;
     width: 100%;
-    height: 50%;
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    line-height: 50px;
+}
+
+.table-calendar td {
+   width: calc(100% / 7);
+   text-align: center;
+   padding: 2.25rem;
+}
+
+.footer-container-calendar {
+    font-size: 1.35rem;
+    font-weight: bold;
+}
+
+.footer-container-calendar select {
+    padding: 0.35rem;
+    font-size: 1rem;
+    border: 1px solid #c8c8c8;
+    border-radius: 10px;
+    background-color: #fafafa;
+    margin-right: .75rem;
+    transition: transform 0.3s ease, border-color 0.3s ease;
+}
+
+.footer-container-calendar select:hover {
+    border-color: #2596be;
+    transform: scale(1.03);
 }
 
 #bottom {
-    display: block;
-    width: 100%;
-    height: 50%;
-    background-color: #f9f9f9;
-    color: #333;
-    text-align: center;
-    line-height: 50px;
+    transition: opacity 3s ease-in-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; 
+    margin: 0 auto; 
+    border: 2px solid #f3f3f3;
+    width: 95%;
+  
+    padding-bottom: 5rem;
+    border-top: none;
+    border-radius: 0px 0px 10px 10px; 
+    background-color: #f7f7f7;
+}
 
+.bottom-h3 {
+    background-color: #1e4a34;
+    color: white;
+    width: 75%;
+    margin: 0 auto;
+    padding: 3rem;
+    text-align: center;
+    border-radius: 10px;
+    font-size: 2rem;
+}
+
+.botton-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transition: opacity 3s ease-in-out; 
+    border: 1px solid #f3f3f3;
+    background-color: #fafafa;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1);
+    border-radius: 5px 5px 10px 10px;
+    width: 75%;
+    padding-bottom: 5rem;
+    border-top: none;
+    border-radius: 5px 5px 10px 10px; 
+}
+
+.botton-container input {
+    margin-top: 2.4rem;
+    padding: 0.75rem;
+    font-size: 1rem;
+    border: 1px solid #c8c8c8;
+    border-radius: 10px;
+    background-color: #fafafa;
+    margin-right: .5rem;
+    transition: transform 0.3s ease, border-color 0.3s ease;
+    width: 100%;
+    font-weight: bold;
+}
+
+.botton-container input:hover {
+    border-color: #2596be;
+    transform: scale(1.02);
+}
+
+.botton-container button {
+    margin: 2.4rem;
+    padding: 0.75rem 2rem;;
+    font-size: 1rem;
+    border: 1px solid #c8c8c8;
+    border-radius: 10px;
+    background-color: #2596be;
+    color: white;
+    
+}
+
+.botton-container button:hover {
+    color: #fafafa;
+    background-color: #1e7898;
+    cursor: pointer;
+    transition: 0.3s ease;
+    transform: scale(1.1);
+}
+
+.reminder-h3 {
+    background-color: #1e4a34;
+    color: white;
+    width: 45rem;
+    margin: 0 auto;
+    padding: 3rem;
+    text-align: center;
+    border-radius: 10px;
+    font-size: 2rem;
 }
 
 .wrapper .container-calendar {
@@ -164,10 +313,7 @@ h1 {
     width: 100%;
     max-width: 100vw;
     margin: 0 auto;
-    padding: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
+    padding: 2rem;
 }
 
 .wrapper .table-calendar {
